<resources>
    <string name="app_name">Moscow Universities</string>
    <string name="map">Map</string>/string
    <string name="user_location">User Location</string>
    <string name="driving">Driving</string>
    <string name="mapobjects">Map Objects</string>

    <string name="map_sublayers">Map Sublayers</string>
    <string name="sublayer_buildings_before_mo_geometry">Render Buildings before Map Object Geometry</string>
    <string name="sublayer_buildings_after_mo_geometry">Render Buildings after Map Object Geometry</string>

    <string name="search">Search</string>
    <string name="suggest">Suggest</string>
    <string name="panorama">Panorama</string>
    <string name="custom_layer">Custom Layer</string>
    <string name="masstransit_routing">Masstransit routing</string>
    <string name="geo_json_test">Geo JSON</string>
    <string name="clustering">Clustering</string>

    <string name="cluster_tap_message">Tapped cluster with %d items</string>

    <string name="not_found_error_message">Not found</string>
    <string name="network_error_message">Network error</string>
    <string name="remote_error_message">Remote server error</string>
    <string name="unknown_error_message">Unknown error</string>

    <string name="package_name">com.yandex.mapkitdemo</string>

    <string name="balls_button">Посмотреть проходные баллы</string>
    <string name="back_button">Вернуться</string>
    <string name="panoram_button">Панорама</string>
    <string name="location_button">Расположение на карте</string>
    <string name="buildings">Корпуса</string>
    <string name="build_a_route">Построить маршрут</string>
    <string name="open_panorama">Перейти на панорамный вид</string>
    <string name="choose_building">Выбрать корпус университа</string>
    <string name="open_chat">Открыть чат</string>
    <string name="input">Введите сообщение...</string>
    <string name="developed_by_tsib">Developed by TSIB</string>


    <string-array name="title_logos">
        <item>ВШЭ</item>
        <item>МФТИ</item>
        <item>МГУ</item>
        <item>РХТУ</item>
        <item>МПГУ</item>
        <item>Московский политех</item>
        <item>МИРЭА</item>
        <item>МИССИС</item>
        <item>МТУСИ</item>
    </string-array>


    <string-array name="description_logos">
        <item>Высшая школа экономики</item>
        <item>Московский физико-технический институт</item>
        <item>Московский государственный университет</item>
        <item>Российский химико-технологический университет</item>
        <item>Московский Педагогический Государственный Университет</item>
        <item>Московский Политехнический Университет</item>
        <item>Московский институт радиотехники, электроники и автоматики</item>
        <item>Московский институт стали и сплавов</item>
        <item>Московский технический университет связи и информатики</item>
    </string-array>

    <string-array name="texts">
        <item>ВШЭ создавалась как экономический вуз, поэтому первые факультеты Вышки готовили, в основном, экономистов, менеджеров и социологов. Но современное социально-экономическое образование базируется на междисциплинарности. Не только образовательные, но и исследовательские открытия и прорывы происходят на пересечении различных дисциплин и наук. На взаимодействии экономических, инженерных и гуманитарных школ основаны модели таких всемирно известных университетов, как MIT и Caltech. По этому же пути пошла Вышка.</item>
        <item>Московский физико-технический институт — ведущий технический вуз страны, который входит в престижные рейтинги лучших университетов мира. Здесь обучают фундаментальной и прикладной физике, математике, информатике, химии, биологии, компьютерным технологиям и другим естественным и точным наукам. Сегодня Физтех - это передовой научный центр. За последние годы здесь были открыты 64 новые лаборатории, где работают ученые с мировым именем. Они занимаются проблемами старения и возрастных заболеваний, прикладной и фундаментальной физикой, нанооптикой, квантовыми вычислениями, фотоникой и многим другим.</item>
        <item>Московский государственный университет имени М.В. Ломоносова (МГУ) – крупнейшее и, несомненно, лучшее высшее учебное заведение России, что подтверждают и последний рейтинг британского издания Times Higher Education, и глобальные исследования ряда отечественных организаций. Большая часть зданий университета располагается на Воробьевых горах, на юго-западе Москвы, образуя уникальный "студенческий город", попасть в который многие мечтают с детства. МГУ сегодня – это ведущий научно-исследовательский центр, известный не только собственными стандартами обучения, но и насыщенной культурной жизнью, особой творческой атмосферой и традициями, передающимися из поколения в поколение.</item>
        <item>РХТУ осуществляет подготовку бакалавров и магистров, сохранив и традиционную подготовку специалистов по ряду специальностей. В последние годы встала задача обеспечения производства не только химиками-технологами, но и менеджерами, экономистами, социологами, экологами, специалистами по информационным технологиям. Университет осуществляет и такую подготовку.Образование в РХТУ им. Д.И. Менделеева – это получение фундаментальных знаний, соответствие мировым требованиям, предъявляемым к современным специалистам, умение комплексно решать поставленные задачи в системе «наука – производство – окружающая среда – развитие личности».</item>
        <item>Московский педагогический государственный университет на протяжении своей 145-летней истории не только шел в ногу со временем, но и обладал высоким потенциалом опережающего развития. МПГУ всегда осознавал свою роль и ответственность ведущего педагогического вуза России и СССР, который опирается на лучшие отечественные и мировые традиции высшего образования. Принципы открытости, сотрудничества и сотворчества с российскими вузами и зарубежными партнерами в решении научных задач, подготовке кадров для системы общего и непрерывного педагогического образования были и остаются важнейшими во всех сферах деятельности университета.</item>
        <item>Московский политехнический университет (Политех) – государственный вуз, расположенный в Москве. Дни открытых дверей, факультеты, филиалы, бюджетные места, проходные баллы, контактная информация, сайт.Московский Политех образован путём слияния ФГБОУ ВО «Московский государственный машиностроительный университет (МАМИ)» (Университет машиностроения) и ФГБОУ ВПО «Московский государственный университет печати имени Ивана Федорова» (МГУП имени Ивана Федорова).</item>
        <item>Признанный в России и в мире современный образовательный и научно-исследовательский центр, сочетающий в своей работе классические университетские традиции и современные образовательные технологии. Начиная с момента своего образования, вуз всегда шел в ногу со временем и постоянно расширял спектр образовательных программ в соответствии с потребностями страны в инженерных кадрах, одновременно повышая качество подготовки специалистов и добиваясь признания как в России, так и за ее пределами. РТУ МИРЭА сегодня является одним из лидеров в области подготовки высококвалифицированных специалистов для быстро развивающихся наукоемких отраслей науки и техники: телекоммуникаций, информационных и компьютерных технологий, автоматики, кибернетики, радиотехники и электроники, химии и биотехнологий.</item>
        <item>Признанный в России и в мире современный образовательный и научно-исследовательский центр, сочетающий в своей работе классические университетские традиции и современные образовательные технологии. Начиная с момента своего образования, вуз всегда шел в ногу со временем и постоянно расширял спектр образовательных программ в соответствии с потребностями страны в инженерных кадрах, одновременно повышая качество подготовки специалистов и добиваясь признания как в России, так и за ее пределами. РТУ МИРЭА сегодня является одним из лидеров в области подготовки высококвалифицированных специалистов для быстро развивающихся наукоемких отраслей науки и техники: телекоммуникаций, информационных и компьютерных технологий, автоматики, кибернетики, радиотехники и электроники, химии и биотехнологий.</item>
        <item>Сегодня МТУСИ — это крупный учебно-научный центр подготовки и переподготовки высококвалифицированных специалистов в области телекоммуникаций, информатики, радиотехники, экономики и управления.Профессорско-преподавательский и научный состав МТУСИ насчитывает около 700 человек. Среди них свыше 100 профессоров и более 400 кандидатов наук и доцентов. В числе преподавателей Университета — действительные члены и члены-корреспонденты ряда российских и международных академий, лауреаты Ленинской и Государственной премий, премий Правительства Российской Федерации.В Университете обучается около четырнадцати тысяч студентов очной и заочной формы обучения, аспирантов, слушателей различных курсов.</item>
    </string-array>


    <string-array name="sites">
        <item>https://ba.hse.ru/minkrit2020#pagetop</item>
        <item>https://studika.ru/moskva/mfti/specialnosti</item>
        <item>https://postupi.info/vuz/mgu-im.-m.v.-lomonosova/spec</item>
        <item>https://postupi.info/vuz/rhtu-im.-d.i.mendeleeva/spec</item>
        <item>http://mpgu.su/postuplenie/konkurs-i-prohodnoj-ball-v-2019-godu/</item>
        <item>https://www.mospolytech.ru/postupayushchim/programmy-obucheniya/</item>
        <item>https://priem.mirea.ru/first-degree/selection/2019</item>
        <item>https://misis.ru/applicants/admission/baccalaureate-and-specialty/list/prohodnyebally2018goda/</item>
        <item>https://tabiturient.ru/vuzu/mtusi/proxodnoi/</item>
    </string-array>

    <string-array name="xes">
        <item>55.761504</item>
        <item>55.929729</item>
        <item>55.701964</item>
        <item>55.857471</item>
        <item>55.732903</item>
        <item>55.703780</item>
        <item>55.669767</item>
        <item>55.728067</item>
        <item>55.755918</item>
    </string-array>

    <string-array name="yes">
        <item>37.632893</item>
        <item>37.520809</item>
        <item>37.529700</item>
        <item>37.417657</item>
        <item>37.576414</item>
        <item>37.646314</item>
        <item>37.478458</item>
        <item>37.610260</item>
        <item>37.711960</item>
    </string-array>
</resources>
