<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content">
    <group android:id="@+id/menugroup1" >
        <item
            android:id="@+id/menu1"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/build_a_route"/>
        <item
            android:id="@+id/menu2"
            android:title="@string/open_panorama"/>
        <item
            android:id="@+id/menu3"
            android:visibility="VISIBLE"
            android:title="@string/choose_building">
            <menu>
                <item
                    android:id="@+id/submenu"
                    android:title="Корпус_1"/>
            </menu>
        </item>
    </group>
</menu>