<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_weight="3"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_d"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_d"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:padding="10dp"
                android:gravity="start"
                android:textColor="@color/discrition_text"
                android:textSize="25sp" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:background="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:layout_weight="3.5"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/balls"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/style_4"
                android:onClick="onClick"
                android:textColor="#ffffff"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="4dp"
                android:text="@string/balls_button" />

            <Button
                android:onClick="onClick"
                android:id="@+id/back"
                android:background="@drawable/style_4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="4dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="8dp"
                android:textColor="#ffffff"
                android:text="@string/back_button" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/panorama"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClick"
                android:textColor="#ffffff"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="4dp"
                android:background="@drawable/style_4"
                android:text="@string/panoram_button" />

            <Button
                android:onClick="showLocation"
                android:id="@+id/location_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:textColor="#ffffff"
                android:background="@drawable/style_4"
                android:text="@string/location_button" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>